// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Details renders correctly when loading 1`] = `
<div
  className="BlockDetails-progressContainer-1"
>
  <div>
    <WithStyles(CircularProgress)
      color="secondary"
    />
    <WithStyles(Typography)>
      Loading...
    </WithStyles(Typography)>
  </div>
</div>
`;

exports[`Block Details renders correctly when metadata loaded and attributes loaded 1`] = `
<div
  className="BlockDetails-progressContainer-1"
>
  <div>
    <Connect(WithStyles(AttributeDetails))
      attributeName="health"
      key="health"
    />
    <Connect(WithStyles(AttributeDetails))
      attributeName="icon"
      key="icon"
    />
  </div>
</div>
`;

exports[`Block Details renders correctly when metadata loaded and waiting for attributes 1`] = `
<div
  className="BlockDetails-progressContainer-1"
>
  <div>
    <WithStyles(CircularProgress)
      color="secondary"
    />
    <WithStyles(Typography)>
      Loading...
    </WithStyles(Typography)>
  </div>
</div>
`;

exports[`Block Details renders even if the block is undefined 1`] = `
<div
  className="BlockDetails-progressContainer-1"
/>
`;

exports[`Block Details renders groups correctly 1`] = `
<div
  className="BlockDetails-progressContainer-1"
>
  <div>
    <WithStyles(WidgetGroupExpander)
      expanded={false}
      groupName="health 1"
      key="parameters"
    >
      <Connect(WithStyles(AttributeDetails))
        attributeName="health"
        key="health"
      />
      <Connect(WithStyles(AttributeDetails))
        attributeName="icon"
        key="icon"
      />
    </WithStyles(WidgetGroupExpander)>
  </div>
</div>
`;

exports[`Block Details renders methods correctly 1`] = `
<div
  className="BlockDetails-progressContainer-1"
>
  <div>
    <WithStyles(WidgetGroupExpander)
      expanded={true}
      groupName="save method"
      key="save"
    >
      <Connect(WithStyles(MethodDetails))
        attributeName="save"
      />
    </WithStyles(WidgetGroupExpander)>
  </div>
</div>
`;
